apply toast for edit & delete project

--- a/src/components/Flash/MyFlashes.scss
+++ b/src/components/Flash/MyFlashes.scss
@@ -2,4 +2,12 @@
   position: absolute;
   top: 63px;
   right: 16px;
+
+  .toast {
+    min-width: 300px;
+
+    .toast-header .close > span {
+      color: #fff;
+    }
+  }
 }
